Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   </footer>
 
   <script>
-    const apiKey = "YOUR_API_KEY_HERE";
+    const apiKey = "yqcE1qBM2nQQktL9gLiR6HgZ";
 
     const imageUpload = document.getElementById('image-upload');
     const originalImage = document.getElementById('original-image');
@@ -235,4 +235,5 @@
   </script>
 </body>
 </html>
+
 
