Fix HTML encoding and update Hugging Face token

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <footer>© 2025 SmartAI Object Remover • Free AI Photo Editor</footer>
 
   <script>
-    const hfToken = "YOUR_HUGGINGFACE_TOKEN"; // Replace locally
+    const hfToken = "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"; // Replace locally
 
     const uploadArea = document.getElementById('upload-area');
     const imageInput = document.getElementById('imageInput');
@@ -183,3 +183,4 @@
 
     removeBtn.onclick = async () => {
       alert
+
