Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <footer>© 2025 SmartAI Object Remover • Free AI Photo Editor</footer>
 
   <script>
-    const hfToken = "YOUR_HUGGINGFACE_TOKEN"; // Replace with your own token for local testing
+    const hfToken = "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"; // Replace with your own token for local testing
     const uploadArea = document.getElementById('upload-area');
     const imageInput = document.getElementById('imageInput');
     const canvas = document.getElementById('canvas');
@@ -207,3 +207,4 @@
   </script>
 </body>
 </html>
+
