Update and rename index.html.txt to index.html

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ removeBtn.onclick=async()=>{
   -------------------------------------------------
   To enable AI removal locally:
 
-  const hfToken = "YOUR_HUGGINGFACE_TOKEN";
+  const hfToken = "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";
   const endpoint = "https://api-inference.huggingface.co/models/runwayml/stable-diffusion-inpainting";
 
   const blob = await new Promise(r=>canvas.toBlob(r,"image/png"));
@@ -199,4 +199,5 @@ downloadBtn.onclick=()=>{
 </script>
 </body>
 </html>
+
 
