--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="SmartAI Photo Editor — Free AI tool to remove background, erase unwanted objects, and enhance photos instantly online.">
+<meta name="keywords" content="AI background remover, AI object remover, photo editor, remove background free, SmartAI Photo Editor, image editing AI">
+<meta name="robots" content="index, follow">
+<meta property="og:title" content="SmartAI Photo Editor">
+<meta property="og:description" content="Free online AI tool to remove background and erase objects instantly.">
+<meta property="og:image" content="https://i.ibb.co/2Kf3yW9/smartai-logo.png">
+<meta property="og:url" content="https://ankityadav3812.github.io/SmartAI-PhotoEditor/">
+<link rel="canonical" href="https://ankityadav3812.github.io/SmartAI-PhotoEditor/">
+<title>SmartAI Photo Editor — Free AI Background & Object Remover</title>
+
     <title>SmartAI Photo Editor</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -444,3 +454,4 @@
     </script>
 </body>
 </html>
+
